@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2000-01-12 01:29:46 asaim Exp $
+$Id: History,v 1.9 2000-01-26 06:42:14 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jan 26, 00, M.Asai (tag event-V01-00-01)
+- Corrections for trajectories of suspended tracks
+- This tag requires tracking-V01-00-01
+
 Jan 12, 00, M.Asai (tag event-V01-00-00)
 - G4EventManager becomes a singleton.
 - G4EventManager keeps the pointers of all user action classes except
